# tamper-resistance

./: .gitignore  README.md  giles_head.py  giles_prepare.sh  giles_print_head.py  giles_run.sh  pyproject.toml  requirements.txt  run_giles.sh  run_testcase.sh  tar.py  testcase.py
configs/: accel_config_1_gpu.yaml  config.py
modules/: dataloaders.py  dom_datasets.py  fsdp_v1_utils.py  objectives.py  training.py
